# aoc

./: Cargo.toml  justfile  readme.md
2015/01-not-quite-lisp/: Cargo.toml
2015/01-not-quite-lisp/src/: main.rs
2015/02-i-was-told-there-would-be-no-math/: Cargo.toml
2015/02-i-was-told-there-would-be-no-math/src/: main.rs
2015/03-perfectly-spherical-houses-in-a-vacuum/: Cargo.toml
2015/03-perfectly-spherical-houses-in-a-vacuum/src/: main.rs
2015/04-the-ideal-stocking-stuffer/: Cargo.toml
2015/04-the-ideal-stocking-stuffer/src/: main.rs
2015/05-doesnt-he-have-intern-elves-for-this/: Cargo.toml
2015/05-doesnt-he-have-intern-elves-for-this/src/: main.rs
2015/06-probably-a-fire-hazard/: Cargo.toml
2015/06-probably-a-fire-hazard/src/: main.rs
aoc-proc/: Cargo.toml
aoc-proc/src/: lib.rs
