[workspace]
resolver = "3"
members = [
    "aoc-proc",
    
    # 2015
    "2015/01-not-quite-lisp",
    "2015/02-i-was-told-there-would-be-no-math",
    "2015/03-perfectly-spherical-houses-in-a-vacuum"
]

[workspace.package]
publish = false
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
aoc = { path = "aoc-proc" }
quote = "1.0.40"
syn = "2.0.101"
